# template_embedded_cmake

./: CMakeLists.txt  LICENSE  README.md  build-all  makefile  stm32f4_flash.ld
cmake/: arm-none-eabi.cmake  utils.cmake
cmake-toolchains/: avr-gcc.cmake
cmake-utils/: arm-utils.cmake  avr-utils.cmake  post-build.cmake
libstm32/: CMakeLists.txt
port/stm32f4/system/: init.c
src/: CMakeLists.txt  main.c  startup_stm32f40xx.s  stm32f4xx_conf.h  system_stm32f4xx.c
src/app/: CMakeLists.txt  main.c
src/app/bsp/: button.h  user_button.c  user_button.h  user_led.h  user_uart.c
src/app/hw/: gpio.c  uart.c  uart.h
src/app/system/: init.h  tick.h
src/app/utils/: button.c  fifo.c
src/bsp/: button.h  led.h
src/firmware/: CMakeLists.txt
src/firmware/app/: comm.c  comm.h  logic.c  logic.h
src/firmware/bsp/: user_button.c  user_button.h  user_led.c  user_led.h  user_uart.c  user_uart.h
src/firmware/hw/: uart.c  uart.h
src/firmware/system/: init.h
src/firmware/utils/: button.c  fifo.c  pulse.c  slip.c  slip.h  timer.c
src/hw/: gpio.c  gpio.h  gpio_port.c  uart.h
src/port/atmega328p/: CMakeLists.txt  toolchain-config.cmake
src/port/atmega328p/atmega/: atmega328p.h
src/port/atmega328p/bsp/: user_button.c  user_led.c  user_uart.c
src/port/atmega328p/hw/: gpio_port.c  uart_port.c
src/port/atmega328p/system/: init.c  isr.c  tick.c
src/port/atmega328p/utils/: pulse_port.c  timer_port.c
src/port/stm32f0/: CMakeLists.txt  stm32f0_flash.ld  toolchain-config.cmake
src/port/stm32f0/bsp/: user_button.c  user_led.c  user_uart.c
src/port/stm32f0/cmsis/device/: stm32f072xb.h
src/port/stm32f0/hw/: gpio_port.c  uart_port.c
src/port/stm32f0/system/: init.c  isr.c  tick.c
src/port/stm32f4/: CMakeLists.txt  startup_stm32f40xx.s  toolchain-config.cmake
src/port/stm32f4/bsp/: button.c  led.c  user_button.c  user_led.c  user_uart.c
src/port/stm32f4/hw/: gpio_port.c  uart_port.c
src/port/stm32f4/system/: init.c  isr.c  tick.c
src/port/stm32f4/utils/: button_port.c
src/system/: init.c  init.h  isr.c  isr.h  tick.c  tick.h
src/utils/: button.c  button.h  button_port.c  fifo.c  fifo.h  pulse.c  pulse.h  pulse_port.c  timer.c  timer.h  timer_port.c
tests/: CMakeLists.txt  test_fifo.c  test_slip.c
