set(LIBSTM32F4_NAME stm32f4)
set(LIBSTM32F4_NAME ${LIBSTM32F4_NAME} PARENT_SCOPE)

add_library(${LIBSTM32F4_NAME})

file(GLOB LIBSTM32F4_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/src/*)

target_sources(${LIBSTM32F4_NAME} PRIVATE ${LIBSTM32F4_SRC_FILES})
target_include_directories(${LIBSTM32F4_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/inc)
